# life-ai-kg

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DESIGN.md  Dockerfile  KNOWN_ISSUES.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  reset.ps1  run-demo.ps1  setup.ps1
alembic/: env.py
alembic/versions/: 001_initial_schema.py
examples/: EVAL_REPORT.md
examples/api_responses/: README.md  entity_neighborhood.json  entity_search.json  graph_stats.json  job_status_completed.json  path_ambroxol_gcase.json  subgraph.json
scripts/: audit_evidence.py  chunk_documents.py  dedup_evidence.py  diagnose_evidence.py  eval.py  extract_kg.py  fetch_pubmed.py  init-db.sql  repair_evidence.py  test_api.py  test_gemini.py  verify_api.py  visualize.py
src/: __init__.py  main.py
src/api/: __init__.py  documents.py  entities.py  graph.py  jobs.py
src/core/: __init__.py  config.py  logging.py
src/db/: __init__.py  base.py  enums.py  session.py
src/db/models/: __init__.py  audit_log.py  chunk.py  document.py  entity.py  evidence.py  job.py  relation.py
src/schemas/: __init__.py  common.py  documents.py  entities.py  graph.py  jobs.py
src/services/: __init__.py  chunking.py  extraction.py  llm_client.py  pubmed.py
src/workers/: __init__.py  celery_app.py  job_store.py  tasks.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_config.py  test_extraction.py
