[project]
name = "life-ai-kg"
version = "0.1.0"
description = "Knowledge Graph Backend for Ambroxol-Parkinson's Disease Research"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    
    # UUID7 Support
    "uuid6>=2024.1.12",
    
    # Task Queue
    "celery[redis]>=5.3.6",
    "redis>=5.0.1",
    
    # Data Validation
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    
    # HTTP Client (PubMed API)
    "httpx>=0.26.0",
    "tenacity>=8.2.3",
    
    # LLM Integration
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "lxml>=5.1.0",
    
    # Visualization
    "pyvis>=0.3.2",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    
    # Linting & Formatting
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    
    # Pre-commit
    "pre-commit>=3.6.0",
    
    # Type stubs
    "types-redis>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ============================================
# Ruff Configuration (Linting & Formatting)
# ============================================
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "UP042",  # prefer StrEnum — we keep (str, Enum) for broader compatibility
    "SIM105", # prefer contextlib.suppress — explicit try/except is clearer here
    "ARG001", # unused function argument — Celery bind=True requires self
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ============================================
# MyPy Configuration (Type Checking)
# ============================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "lxml.*",
]
ignore_missing_imports = true

# ============================================
# Pytest Configuration
# ============================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

# ============================================
# Coverage Configuration
# ============================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
